change tag filter configuration

--- a/jobs/networkoptix_test_job.yaml
+++ b/jobs/networkoptix_test_job.yaml
@@ -15,7 +15,7 @@
               name: BRANCH
               description: Choose branch to checkout
               type: PT_BRANCH_TAG
-              tagFilter: 'origin/(.*)'
+              tagFilter: '*'
               branchFilter: 'origin/(.*)'
               sortMode: ASCENDING
               defaultValue: 'master'
