--- a/jobs/networkoptix_test_job.yaml
+++ b/jobs/networkoptix_test_job.yaml
@@ -41,7 +41,7 @@
             branches:
                 - ${BRANCH}
     builders:
-        - shell: python3 main.py > host_parameters.txt
+        - shell: "bash -c python3 main.py > host_parameters.txt"
 #        - copyartifact:
 #              project: "networkoptix-test-job"
 #              filter: '**/*'
