[jira-1] create jjb projects
* fix typ in projects: copy-artifacts project properties

--- a/jobs/networkoptix_test_job.yaml
+++ b/jobs/networkoptix_test_job.yaml
@@ -6,7 +6,7 @@
     disabled: false
     properties:
         - copyartifact:
-              projects: copy-artifact
+              projects: copy-artifacts
         - disable-resume
         - build-discarder:
             num-to-keep: 10
