[jira-1] create jjb projects
* add archive artifacts to networkoptix_test_job.yaml
  change artifact filter in copy_artifacts.yaml

--- a/jobs/copy_artifacts.yaml
+++ b/jobs/copy_artifacts.yaml
@@ -12,7 +12,7 @@
     builders:
         - copyartifact:
               project: 'networkoptix-test-job'
-              filter: '**/*'
+              filter: '**/host_parameters.txt'
               target: '../../workspace/networkoptix-test-job/'
               which-build: last-completed
               optional: true
